5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1593_1804.log
== TEST (2019-03-26 11:44:03) 
-- CODE:
from math import *

xA = float(input("Coordenada xA: "))
yA = float(input("Coordenada yA: "))
xB = float(input("Coordenada xB: "))
yB = float(input("Coordenada yB: "))

x = sqrt((xB - xA)**2 + (yB - yA)**2)

print(round, 2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:44:14) 
-- CODE:
from math import *

xA = float(input("Coordenada xA: "))
yA = float(input("Coordenada yA: "))
xB = float(input("Coordenada xB: "))
yB = float(input("Coordenada yB: "))

x = sqrt((xB - xA)**2 + (yB - yA)**2)

print(round, 2)
-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:44:35) 
-- CODE:
from math import *

xA = float(input("Coordenada xA: "))
yA = float(input("Coordenada yA: "))
xB = float(input("Coordenada xB: "))
yB = float(input("Coordenada yB: "))

x = sqrt((xB - xA)**2 + (yB - yA)**2)

print(round(x, 2)
-- ERROR:
File "XXXX", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:44:40) 
-- CODE:
from math import *

xA = float(input("Coordenada xA: "))
yA = float(input("Coordenada yA: "))
xB = float(input("Coordenada xB: "))
yB = float(input("Coordenada yB: "))

x = sqrt((xB - xA)**2 + (yB - yA)**2)

print(round(x, 2))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:44:45) 
-- CODE:
from math import *

xA = float(input("Coordenada xA: "))
yA = float(input("Coordenada yA: "))
xB = float(input("Coordenada xB: "))
yB = float(input("Coordenada yB: "))

x = sqrt((xB - xA)**2 + (yB - yA)**2)

print(round(x, 2))
-- EXECUTION TIME:
0.151082
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.77
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:44:51) 
-- CODE:
from math import *

xA = float(input("Coordenada xA: "))
yA = float(input("Coordenada yA: "))
xB = float(input("Coordenada xB: "))
yB = float(input("Coordenada yB: "))

x = sqrt((xB - xA)**2 + (yB - yA)**2)

print(round(x, 3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:44:58) 
-- CODE:
from math import *

xA = float(input("Coordenada xA: "))
yA = float(input("Coordenada yA: "))
xB = float(input("Coordenada xB: "))
yB = float(input("Coordenada yB: "))

x = sqrt((xB - xA)**2 + (yB - yA)**2)

print(round(x, 3))
-- EXECUTION TIME:
0.146682
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:34:51) 
-- CODE:
from math import *

xA = float(input("Coordenada xA: "))
yA = float(input("Coordenada yA: "))
xB = float(input("Coordenada xB: "))
yB = float(input("Coordenada yB: "))

x = sqrt((xB - xA)**2 + (yB - yA)**2)

print(round(x, 3))
-- EXECUTION TIME:
0.184259
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
